Kubernetes/tests/gateways/gateway-api-test/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: kubevision-gateway
    namespace: kubevision-ingress
    sectionName: https-wildcard
  hostnames:
  - "argo.creative.opik.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
