Kubernetes/tests/gateways/gateway-api-test/global-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-http-redirect
  namespace: kubevision-ingress
spec:
  parentRefs:
  - name: kubevision-gateway
    sectionName: http-main
  - name: kubevision-gateway
    sectionName: http-wildcard
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
        statusCode: 301
