Kubernetes/tests/gateways/gateway-api-test/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: kubevision-ingress
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: http-internal
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
